<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">CheemsFeed</string>
    <string name="title_home">Feed</string>
    <string name="title_settings">Settings</string>
    <string name="btn_login">Login with Reddit</string>
    <string name="btn_logout">Logout</string>
    <string name="menu_login">Login</string>
    <string name="settings_theme">Theme</string>
    <string name="settings_theme_light">Light</string>
    <string name="settings_theme_dark">Dark</string>
    <string name="settings_theme_auto">Auto (System)</string>
    <string name="settings_material_you">Material You Colors</string>
    <string name="settings_material_you_desc">Use system colors (Android 12+)</string>
    <string name="error_loading_posts">Error loading posts</string>
    <string name="loading">Loading…</string>
    <string name="empty_feed">No posts available</string>
</resources>
